--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-                   yum install nodejs nodejs-devel -y
+                   sudo yum install nodejs nodejs-devel -y
                    ls -la
                    node --version
                    npm --version
