--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -3,9 +3,13 @@ pipeline {
 
     stages {
         stage('Build') {
+            agent {
+                docker {
+                    image 'node:18-alpine'
+                }
+            }
             steps {
                 sh '''
-                   sudo yum install nodejs nodejs-devel -y
                    ls -la
                    node --version
                    npm --version
@@ -17,3 +21,4 @@ pipeline {
         }
     }
 }
+
