--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
             agent {
                 docker {
                     image 'node:18-alpine'
+                    reuseNode true
                 }
             }
             steps {
@@ -13,7 +14,7 @@ pipeline {
                    ls -la
                    node --version
                    npm --version
-                   npm ci
+                   npm install
                    npm run build
                    ls -la
                 '''
