--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -2,6 +2,18 @@ pipeline {
     agent any
 
     stages {
+        stage("Clean Up") {
+            steps {
+                deleteDir()
+            }
+        }
+        stage('Clone Repository') {
+            steps {
+                withCredentials([string(credentialsId: 'github-pat', variable: 'GITHUB_PAT')]) {
+                  sh ('git clone https://x-token-auth:${GITHUB_PAT}@github.com/oadetola89/learn-jenkins-app.git')
+                }
+            }
+        }
         stage('Build') {
             steps {
                 sh '''
@@ -15,7 +27,7 @@ pipeline {
                    npm --version
                    npm install
                    npm run build
-                   ls -lah
+                   ls -la
                 '''
             }
         }
@@ -29,4 +41,3 @@ pipeline {
         }
     }
 }
-
